force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__Attempted_Root_Records__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Attempted_Root_Records__c</fullName>
    <formula>OB_Archiver__Total_Skipped_Root_Records__c + OB_Archiver__Failed__c + OB_Archiver__Succeeded__c</formula>
    <label>Attempted Root Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>