force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Unarchive</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Export-to-external-bucket</fullName>
            </value>
            <value>
                <fullName>Export-and-download</fullName>
            </value>
            <value>
                <fullName>Purge</fullName>
            </value>
            <value>
                <fullName>Purge-estimation</fullName>
            </value>
            <value>
                <fullName>Unarchive-sdk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>