force-app/main/default/objects/OB_Archiver__ArchiveLog__c/fields/OB_Archiver__UnarchiveObject__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__UnarchiveObject__c</fullName>
    <label>UnarchiveObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>