force-app/main/default/objects/OB_Archiver__ArchiveLog__c/listViews/InProgress_Activities.listView-meta.xml
<ListView>
    <fullName>InProgress_Activities</fullName>
    <columns>OB_Archiver__PolicyId__c</columns>
    <columns>OB_Archiver__SObjectName__c</columns>
    <columns>OB_Archiver__Status__c</columns>
    <columns>OB_Archiver__Progress_Bar__c</columns>
    <columns>OB_Archiver__Type__c</columns>
    <columns>OB_Archiver__Succeeded__c</columns>
    <columns>OB_Archiver__RecordCount__c</columns>
    <columns>OB_Archiver__Failed__c</columns>
    <columns>OB_Archiver__StartedAt__c</columns>
    <columns>OB_Archiver__EndedAt__c</columns>
    <columns>OB_Archiver__ParentDetail__c</columns>
    <columns>OB_Archiver__FailedRecordsLogs__c</columns>
    <columns>OB_Archiver__size__c</columns>
    <columns>OB_Archiver__Total_Skipped_Root_Records__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Archiver__Status__c</field>
        <operation>equals</operation>
        <value>Started</value>
    </filters>
    <label>InProgress Activities</label>
</ListView>